Closed Bug 1800367 Opened 3 years ago Closed 3 years ago

Cannot display bold text when default font is a variable font

Categories

(Core :: Layout: Text and Fonts, defect)

Firefox 108
Unspecified
Linux
defect

Tracking

()

VERIFIED FIXED
108 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox107 --- verified
firefox108 --- verified

People

(Reporter: st, Assigned: jfkthame)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:108.0) Gecko/20100101 Firefox/108.0

Steps to reproduce:

  1. Install a variable font in the operating system. I have tried with the variable version of Inter from https://github.com/rsms/inter/releases/tag/v4.0-beta7 and Recursive from https://github.com/arrowtype/recursive/releases/tag/v1.085
  2. Open up Firefox with a fresh profile, and visit the following URL: data:text/html,regular<b>bold
  3. The text "regular" is non-bold, the text "bold" is displayed in bold
  4. In about:preferences → General → Fonts, change the default font to "Inter" (or whatever variable font you installed)
  5. Switch back to the data: URL above

Actual results:

Both "regular" and "bold" are displayed in the regular weight

Expected results:

The text "bold" should still be displayed in bold, as with non-variable fonts.

This worked as expected a couple of days ago, Wednesday the 9th at the earliest.

The Bugbug bot thinks this bug should belong to the 'Core::Layout: Text and Fonts' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Layout: Text and Fonts
Product: Firefox → Core

Thanks for the report. I'm guessing this is almost certainly a regression from the patch in bug 1798036. I'll look into it.

Assignee: nobody → jfkthame
Severity: -- → S2
OS: Unspecified → Linux
Regressed by: 1798036

This in effect reverts bug 1798036 for desktop Linux, as the fix there
was really only needed for Android, and turns out to conflict with how
the FC-based backend handles variations.

Tested locally; currently no reftest because we cannot assume presence
of an installed variable font.

Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a4c58dc38712 For Linux, don't add an FTUserFontData when instantiating an installed variation font. r=lsalzman
Status: UNCONFIRMED → NEW
Ever confirmed: true
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch

I can confirm the latest nightly fixes the issue for me! Thanks!

Flags: qe-verify+

Set release status flags based on info from the regressing bug 1798036

Reproduced with nightly form 11.11.2022.

Issue is no longer reproducible on 109.0a1 Nightly from 17.11.2022.

Status: RESOLVED → VERIFIED

Issue verified fixed on 108.0b3 Firefox.

Flags: qe-verify+

Reproduced the issue with Firefox 108.0a1 (2022-11-12) on Ubuntu 20.04.3 using the data:text/html,regular<b>bold test case. After changing the font to Inter or Recursive the text bold is no longer bolded.
The issue is verified fixed with Firefox 107.0.1 on Ubuntu 20.04.3. The text bold remains bolded after the font is changed to Inter or Recursive.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: