Bug 1800367 - For Linux, don't add an FTUserFontData when instantiating an installed variation font. r=lsalzman, a=dmeehan

This in effect reverts bug 1798036 for desktop Linux, as the fix there
was really only needed for Android, and turns out to conflict with how
the FC-based backend handles variations.

Tested locally; currently no reftest because we cannot assume presence
of an installed variable font.

Differential Revision: https://phabricator.services.mozilla.com/D161958